<resources>
    <string name="app_name"></string>
    <string name="channel_name">blog_notification</string>
    <string name="channel_description">sending_notifications_from_app</string>
    <string name="title_text">Blog App</string>
    <string name="welcome_message">Your own personal blog</string>
    <string name="authBtnText">Get started</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signInBtnText">Login</string>
    <string name="changeParam">Or</string>
    <string name="registrationBtnText">Create</string>
    <string name="createAcc">Create account</string>
    <string name="usernameHint">Username</string>
    <string name="post_title_img_desc">post_title_img_desc</string>
    <string name="post_title_hint">Post title:</string>
    <string name="post_desc_hint">Type your post:</string>
    <string name="save_post">Save Post !</string>
    <string name="add_new_photo">add_new_photo</string>
    <string name="add_new_post">Add new Post!</string>
    <string name="action_signOut">Sign out</string>
    <string name="empty_folder">Post list is empty, create new one by clicking add button!</string>
    <string name="string_empty_folder">Post list is empty, create new one by clicking add button</string>
    <string name="title_login">Enter account</string>
    <string name="title_registration">Create account</string>
    <string name="share_btn">share_btn</string>
    <string name="post_img">post_img</string>
</resources>