<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    >
    <ProgressBar
        android:id="@+id/loading_bar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            />
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/signInBtn"
            android:textColor="@color/purple_700"
            android:text="@string/signInBtnText"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orChange"
            android:text="@string/changeParam"
            android:textSize="15dp"
            android:gravity="center_horizontal"
            />
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/registrationBtn"
            android:textColor="@color/purple_700"
            android:text="@string/registrationBtnText"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            />
    </LinearLayout>
</LinearLayout>