<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationScreen"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/gradient_main_screen"
    >
    <ProgressBar
        android:id="@+id/loading_bar_registration"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/login_form_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/app_title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/title_registration"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_acc_registration"
            android:hint="@string/usernameHint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
        <AutoCompleteTextView
            android:layout_margin="5dp"
            android:id="@+id/email_registration"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_registration"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            />
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/registrationUserBtn"
            android:textColor="@color/white"
            android:text="@string/registrationBtnText"
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</LinearLayout>