<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:text="@string/title_text"
        android:textSize="30sp"
        />
    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="10dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_gravity="center"
                android:text="@string/welcome_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authBtn"
        android:text="@string/authBtnText"
        android:textColor="@android:color/holo_blue_bright"
        android:background="@android:color/transparent"
        />
</LinearLayout>