<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="15dp"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:gravity="end"
        >
        <TextView
            android:id="@+id/post_row_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            tools:text="@string/usernameHint" />
        <ImageButton
            android:id="@+id/post_row_btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/share_btn"
            android:src="@android:drawable/ic_menu_share"
            android:tint="#FF0000" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >
        <ImageView
            android:id="@+id/post_row_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/post_img"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
        <TextView
            android:id="@+id/post_row_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/usernameHint"
            />
        <TextView
            android:id="@+id/post_row_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            tools:text="@string/usernameHint"
            />
        <TextView
            android:id="@+id/post_row_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="15sp"
            android:textStyle="italic"
            tools:text="@string/usernameHint"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>